--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <script src="~/js/hoverIntent.js"></script>
     <script src="~/js/superfish.js"></script>
     <link href="~/Content/iconfont/iconfont.css" rel="stylesheet" />
-        @Scripts.Render("~/easyui/js")
+    @Scripts.Render("~/easyui/js")
     <script src="~/js/commondata.js"></script>
 </head>
 <body>
@@ -46,7 +46,8 @@
                         <li><a href="/Order/LandOut_List">陆运出口</a></li>
                         <li><a href="/Order/SeaIn_List">海运进口</a></li>
                         <li><a href="/Order/SeaOut_List">海运出口</a></li>
-                        <li><a href="">叠加保税</a></li>
+                        <li><a href="">国内结转</a></li>
+                        <li><a href="/Order/OverlayBonded_List">叠加保税</a></li>
                         <li><a href="/Order/SpecialSupervision_List">特殊监管</a></li>
                     </ul>
                 </li>
