--- a/Views/Order/DomesticKnot_List.cshtml
+++ b/Views/Order/DomesticKnot_List.cshtml
@@ -37,17 +37,17 @@
                 <tr>
                     <th data-options="field: 'ck', checkbox: true"></th>
                     <th data-options="field:'CODE',width:140,sortable:true,align:'center'">业务编号</th>
-                    <th data-options="field:'test',width:140,sortable:true,align:'center'">关务编号</th>
                     <th data-options="field:'ASSOCIATEPEDECLNO',width:140,align:'center',sortable:true">报关单号</th>
                     <th data-options="field:'text',width:100,sortable:true,align:'center'">关务状态</th>
-                    <th data-options="field:'text',width:100,sortable:true,align:'center'">转入出类别</th>
+                    <th data-options="field:'text',width:100,sortable:true,align:'center'">业务类型</th>
+                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,align:'center'">企业</th>
+                    <th data-options="field:'CONTRACTNO',width:100,sortable:true,align:'center'">合同/发票号</th>
+                    @*<th data-options="field:'text',width:100,sortable:true,align:'center'">转入出类别</th>
                     <th data-options="field:'BUSITYPE',width:100,sortable:true,align:'center'">进出口类别</th>
                     <th data-options="field:'CORRESPONDNO',width:120,sortable:true,align:'center'">对应号</th>
                     <th data-options="field:'text',width:120,sortable:true,align:'center'">出口业务方式</th>
-                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,align:'center'">企业</th>
                     <th data-options="field:'text',width:120,align:'center'">手册号</th>
-                    <th data-options="field:'text',width:120,align:'center'">核销单号</th>
-                    <th data-options="field:'CONTRACTNO',width:100,sortable:true,align:'center'">合同/发票号</th>
+                    <th data-options="field:'text',width:120,align:'center'">核销单号</th>*@
                     <th data-options="field:'DECLSHEETNUM',width:70,sortable:true,align:'center'">报关单张数</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',width:100,sortable:true,align:'center'">贸易方式</th>
                     <th data-options="field:'GOODSNUM',width:50,sortable:true,align:'center'">总件数</th>
@@ -70,6 +70,9 @@
                     <th data-options="field:'SHIWUFANGXINGTIME',width:200,sortable:true,align:'center'">实物放行时间</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,align:'center'">实物放行人</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:100,align:'center'">申报关区</th>
+                    <th data-options="field:'text',width:100,align:'center'">打印状态</th>
+                    <th data-options="field:'text',width:80,align:'center'">报检状态</th>
+                    <th data-options="field:'text',width:120,align:'center'">关务编号</th>
                     <th data-options="field:'text',width:80,align:'center'">急货标识</th>
                     <th data-options="field:'text',width:200,sortable:true,align:'center'">出单日期</th>
                     <th data-options="field:'text',width:100,align:'center'">报关方式</th>
@@ -218,8 +221,8 @@
                 var row = $('#datagrid').datagrid('getData').rows[index];
 
                 if (row.ID != "") {
-                    window.location.href = "/Order/OverlayBonded_Edit?ID=" + row.ID;
-                }  
+                    window.location.href = "/Order/DomesticKnot_Edit?ID=" + row.ID;
+                }
             }
         });
 
