--- a/Views/Order/SeaIn_Edit.cshtml
+++ b/Views/Order/SeaIn_Edit.cshtml
@@ -474,7 +474,7 @@
                         var name = "#" + type + 'USERNAME';
                         debugger;
                         $(time).textbox('setValue', data.datetime);
-                        $(name).textbox('setValue', 'lakers');
+                        $(name).textbox('setValue', data.name);
                     } else {
                         $.messager.alert('异常', '联系管理员');
                     }
