--- a/Views/Order/OverlayBonded_Edit.cshtml
+++ b/Views/Order/OverlayBonded_Edit.cshtml
@@ -1,9 +1,4 @@
-﻿
-
-
-
-
-<style type="text/css">
+﻿<style type="text/css">
     .OrderFrom {
         margin: 10px 0px;
     }
@@ -1286,7 +1281,6 @@ else
 </div>
 
 <script type="text/javascript">
-    var str = '@Html.Raw(ViewData["name"])';
     var type;
     var form;
     function formatItem(row) {
