--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                         <li><a href="/Order/LandOut_List">陆运出口</a></li>
                         <li><a href="/Order/SeaIn_List">海运进口</a></li>
                         <li><a href="/Order/SeaOut_List">海运出口</a></li>
-                        <li><a href="">国内结转</a></li>
+                        <li><a href="/Order/DomesticKnot_List">国内结转</a></li>
                         <li><a href="/Order/OverlayBonded_List">叠加保税</a></li>
                         <li><a href="/Order/SpecialSupervision_List">特殊监管</a></li>
                     </ul>
